fix for fixed navbar top padding (spacing btw nav and main img)

--- a/template/css/app.css
+++ b/template/css/app.css
@@ -9,7 +9,7 @@ body {
    font-size: 1.1em;
 }
 body{
-  padding-top: 83px;
+  padding-top: 82px;
 }
 /* Wrapper for page content to push down footer */
 #wrap {
